# routes/motorinci.php
@@ -1,0 +1,10 @@
+<?php
+
+use App\Http\Controllers\Motorinci\CategoryController;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Route;
+
+
+Route::middleware('auth:sanctum')->prefix('motorinci')->group(function () {
+    Route::apiResource('categories', CategoryController::class);
+});
